--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         alt="Pessoa com Acessibilidade no Mercado de Trabalho.">
       <div>
         <h1 class="text-center fs-2">SPECIAL JOBS</h1>
-        <p class="text-center">Conheça o recrutador(a) de empregos para pessoas com deficiência </p>
+        <p class="text-center">Ajudamos com dicas de entrevistas, a redigir curriculos e video curriculos. Em nosso Site você poderá cadastrar suas informações profissionais, falar sobre suas habilidades e ganhar mais visibilidades no mercado de trabalho.</p>
       </div>
     </div>
     <!--Fabio-->
@@ -72,7 +72,7 @@
             <img src="src/img/1.png" class="d-block w-100" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">Demonstre suas capacidades</h5>
-              <p class="card-text">POSTE SEU CURRÍCULO E UM VÍDEO SOBRE SUAS CAPACIDADES.</p>
+              <p class="card-text">Poste seu currículo e um vídeo sobre suas capacidades.</p>
               <a href="#" class="btn btn-secondary">Saiba mais</a>
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal1">
@@ -106,7 +106,7 @@
             <img src="src/img/2.png" class="d-block w-100" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">Dicas de entrevistas</h5>
-              <p class="card-text">AUMENTE SUAS CHANCES DE SER CONTRATADA.</p>
+              <p class="card-text">Aumente suas chances no mercado de trabalho.</p>
               <a href="#" class="btn btn-secondary">Saiba mais</a>
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal2">
@@ -140,7 +140,7 @@
             <img src="src/img/3.png" class="d-block w-100" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">Ajudas com currículo</h5>
-              <p class="card-text">EDITE SEU CURRÍCULO.</p>
+              <p class="card-text">Ajudamos você a redigir seu currículo.</p>
               <a href="#" class="btn btn-secondary">Saiba mais</a>
             </div>
           </div>
