--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      <video width="100%" controls>
-                        <source src="./src/videos/InShot_20220505_143719556.mp4" type="video/mp4">
-                      </video>
+                      <iframe width="100%"  src="https://www.youtube.com/embed/LgGmKkYdfR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
