--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="conheca d-flex align-items-center flex-wrap justify-content-around">
       <img src="./src/img/AcessibilidadenoTrabalho.png" class="rounded img-fluid "
         alt="Pessoa com Acessibilidade no Mercado de Trabalho.">
-      <div>
+      <div style="width: 400px">
         <h1 class="text-center fs-2">SPECIAL JOBS</h1>
         <p class="text-center">Ajudamos com dicas de entrevistas, a redigir curriculos e video curriculos. Em nosso Site você poderá cadastrar suas informações profissionais, falar sobre suas habilidades e ganhar mais visibilidades no mercado de trabalho.</p>
       </div>
